--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <a class="btn btn-outline" target="_blank" rel="noopener" href="https://github.com/seu-usuario/projeto-tres">Código</a>
               </div>
             </div>
+             <!-- coment -->
           </article>
         </div>
       </div>
