movendo para pagina assets

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="cards-grid">
           <article class="card">
-            <img src="./imagens/Captura de Tela 2025-08-25 às 23.51.59.png" alt="Prévia Projeto 1" class="card-img" />
+            <img src="./assets/Captura de Tela 2025-08-25 às 23.51.59.png" alt="Prévia Projeto 1" class="card-img" />
             <div class="card-body">
               <h3 class="card-title">E-commerce Gamer</h3>
               <p class="card-text">Desenvolvido com HTML, CSS, JavaScript e Node.js, o projeto foca em interface intuitiva, experiência consistente em diferentes telas e funcionalidades dinâmicas.</p>
@@ -67,7 +67,7 @@
           </article>
 
           <article class="card">
-            <img src="./imagens/Captura de Tela 2025-08-26 às 01.36.51.png" alt="Prévia Projeto 2" class="card-img" />
+            <img src="./assets/Captura de Tela 2025-08-26 às 01.36.51.png" alt="Prévia Projeto 2" class="card-img" />
             <div class="card-body">
               <h3 class="card-title">To-Do App</h3>
               <p class="card-text">Lista de tarefas com filtros e persistência local.</p>
@@ -79,7 +79,7 @@
           </article>
 
           <article class="card">
-            <img src="./imagens/Captura de Tela 2025-08-26 às 01.57.56.png" alt="Prévia Projeto 3" class="card-img" />
+            <img src="./assets/Captura de Tela 2025-08-26 às 01.57.56.png" alt="Prévia Projeto 3" class="card-img" />
             <div class="card-body">
               <h3 class="card-title">Mães & Patas </h3>
               <p class="card-text">Projeto social para ong de animais</p>
