--- a/projeto_dois.html
+++ b/projeto_dois.html
@@ -25,9 +25,9 @@
 
         <!-- galeria simples -->
         <div class="cards-grid" style="margin-top:16px;">
-          <img class="card-img" src="./imagens/Captura de Tela 2025-08-26 às 01.36.51.png" alt="Imagem 1 do projeto" />
-          <img class="card-img" src="./imagens/Captura de Tela 2025-08-26 às 01.25.26.png" alt="Imagem 2 do projeto" />
-          <img class="card-img" src="./imagens/Captura de Tela 2025-08-26 às 01.26.00.png" alt="Imagem 3 do projeto" />
+          <img class="card-img" src="./assets/Captura de Tela 2025-08-26 às 01.36.51.png" alt="Imagem 1 do projeto" />
+          <img class="card-img" src="./assets/Captura de Tela 2025-08-26 às 01.25.26.png" alt="Imagem 2 do projeto" />
+          <img class="card-img" src="./assets/Captura de Tela 2025-08-26 às 01.26.00.png" alt="Imagem 3 do projeto" />
         </div>
 
         <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
