--- a/projeto_um.html
+++ b/projeto_um.html
@@ -25,8 +25,8 @@
 
         <!-- galeria simples -->
         <div class="cards-grid" style="margin-top:16px;">
-          <img class="card-img" src="./imagens/Captura de Tela 2025-08-25 às 23.51.59.png" alt="Imagem 1 do projeto" />
-          <video class="card-img" src="./imagens/Gravação de Tela 2025-08-25 às 23.53.40.mov" alt="Imagem 2 do projeto" controls></video>
+          <img class="card-img" src="./assets/Captura de Tela 2025-08-25 às 23.51.59.png" alt="Imagem 1 do projeto" />
+          <video class="card-img" src="./assets/Gravação de Tela 2025-08-25 às 23.53.40.mov" alt="Imagem 2 do projeto" controls></video>
         </div>
 
         <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
