--- a/projeto_tres.html
+++ b/projeto_tres.html
@@ -25,13 +25,13 @@
 
         <!-- galeria simples -->
         <div class="cards-grid" style="margin-top:16px;">
-          <img class="card-img" src="./assets/Captura de Tela 2025-08-26 às 01.57.34.png" alt="Imagem 1 do projeto" />
-          <img class="card-img" src="./assets/Captura de Tela 2025-08-26 às 01.57.56.png" alt="Imagem 2 do projeto" />
-          <img class="card-img" src="./assets/Captura de Tela 2025-08-26 às 01.58.09.png" alt="Imagem 3 do projeto" />
+          <img class="card-img" src="./assets/captura_tela_4.png" alt="Imagem 1 do projeto" />
+          <img class="card-img" src="./assets/captura_tela_3.png" alt="Imagem 2 do projeto" />
+          <img class="card-img" src="./assets/captura_tela_5.png" alt="Imagem 3 do projeto" />
         </div>
 
         <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
-          <a class="btn btn-outline" href="https://github.com/seu-usuario/projeto-um" target="_blank" rel="noopener">Ver código no GitHub</a>
+          <a class="btn btn-outline" href="https://github.com/MylenaLuz" target="_blank" rel="noopener">Ver código no GitHub</a>
         </div>
       </div>
     </section>
