:refactor: atualização de url

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mylena Alves — Portfólio</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -74,7 +75,7 @@
               <p class="card-text">Lista de tarefas com filtros e persistência local.</p>
               <div class="card-actions">
                 <a class="btn" href="projeto_dois.html">Ver página</a>
-                <a class="btn btn-outline" target="_blank" rel="noopener" href="https://github.com/seu-usuario/projeto-dois">Código</a>
+                <a class="btn btn-outline" target="_blank" rel="noopener" href="https://github.com/MylenaLuz/to-do-list">Código</a>
               </div>
             </div>
           </article>
@@ -86,7 +87,7 @@
               <p class="card-text">Projeto social para ong de animais</p>
               <div class="card-actions">
                 <a class="btn" href="projeto_tres.html">Ver página</a>
-                <a class="btn btn-outline" target="_blank" rel="noopener" href="https://github.com/seu-usuario/projeto-tres">Código</a>
+                <a class="btn btn-outline" target="_blank" rel="noopener" href="https://github.com/MylenaLuz/M-es-Patas">Código</a>
               </div>
             </div>
              <!-- coment -->
