--- a/projeto_dois.html
+++ b/projeto_dois.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projeto 2 — Mylena Alves</title>
   <link rel="stylesheet" href="style.css" />
+   <script src="script.js"></script>
 </head>
 <body>
   <header class="site-header">
@@ -31,7 +32,7 @@
         </div>
 
         <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
-          <a class="btn btn-outline" href="https://github.com/MylenaLuz" target="_blank" rel="noopener">Ver código no GitHub</a>
+          <a class="btn btn-outline" href="https://github.com/MylenaLuz/to-do-list" target="_blank" rel="noopener">Ver código no GitHub</a>
         </div>
       </div>
     </section>
